--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "author": "ettrics",
   "license": "MIT",
-  "dependencies": {
+  "dev-dependencies": {
     "autoprefixer": "^5.2.0",
     "browserify": "^11.2.0",
     "gulp": "^3.8.11",
