--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A photo gallery inspired by Google Photos.",
   "main": "./src/js/material-photo-gallery.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "live-server"
   },
   "keywords": ["material", "google", "photo", "gallery", "javascript"],
-  "author": "ettrics",
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^5.2.0",
@@ -23,7 +23,9 @@
     "gulp-uglify": "^1.2.0",
     "imagesloaded": "^3.2.0",
     "jshint-stylish": "^2.0.1",
+    "live-server": "^1.2.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
-  }
+  },
+  "dependencies": {}
 }
