--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "live-server",
     "copy": "cp -r dist/ /Users/m/workspace/photo-transition-experiments/lib/material-photo-gallery/",
     "format": "prettier --config .prettierrc.json --write 'src/**/*.js'",
-    "format:check": "prettier --config config/.prettierrc.json --debug-check --list-different 'src/**/*.js'"
+    "format:check": "prettier --config .prettierrc.json --debug-check --list-different 'src/**/*.js'"
   },
   "keywords": ["material", "google", "photo", "gallery", "javascript"],
   "license": "MIT",
