--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A photo gallery inspired by Google Photos.",
   "main": "./src/js/material-photo-gallery.js",
   "scripts": {
+    "build": "gulp",
+    "watch": "gulp watch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "live-server",
     "copy": "cp -r dist/ /Users/m/workspace/photo-transition-experiments/lib/material-photo-gallery/",
@@ -20,7 +22,6 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-postcss": "^5.1.7",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.2.0",
     "imagesloaded": "^3.2.0",
